--- a/myExtensionsList.json
+++ b/myExtensionsList.json
@@ -1,33 +1,33 @@
 {
   "extensions": {
     "80s-baby": false,
-    "brackets-beautify": false,
-    "brackets-darker": false,
-    "drewkoch.icons": false,
-    "zaggino.brackets-git": false,
-    "hirse.outline-list": false,
-    "edc.brackets-snippets": false,
+    "brackets-beautify": true,
+    "brackets-darker": true,
+    "drewkoch.icons": true,
+    "zaggino.brackets-git": true,
+    "hirse.outline-list": true,
+    "edc.brackets-snippets": true,
     "Brackets-ExtensionsBulkInstall": false,
-    "dnbard.documents-toolbar": false,
+    "dnbard.documents-toolbar": true,
     "codemirror.esnext.highlight": true,
     "brackets-emmet": true,
     "dnbard.extensions-rating": true,
     "funcdocr": true,
     "brackets-hoganjs-language": true,
-    "le717.html-skeleton": false,
-    "pflynn.regex-editor": false,
-    "globexdesigns.brackets-jscs": false,
-    "jslint.configurator": false,
-    "gruehle.markdown-preview": false,
-    "brackets-mustache-language": false,
-    "brackets-mystique-theme": false,
-    "brackets-nodejs": false,
-    "renanveroneze.brackets-open-terminal-here": false,
-    "brackets-pep8": false,
-    "quickdocsjs": false,
-    "asgerf.bracket-rename": false,
-    "brackets-semicenter": false,
-    "spell-check": false,
-    "ternific": false
+    "le717.html-skeleton": true,
+    "pflynn.regex-editor": true,
+    "globexdesigns.brackets-jscs": true,
+    "jslint.configurator": true,
+    "gruehle.markdown-preview": true,
+    "brackets-mustache-language": true,
+    "brackets-mystique-theme": true,
+    "brackets-nodejs": true,
+    "renanveroneze.brackets-open-terminal-here": true,
+    "brackets-pep8": true,
+    "quickdocsjs": true,
+    "asgerf.bracket-rename": true,
+    "brackets-semicenter": true,
+    "spell-check": true,
+    "ternific": true
   }
 }
